2005-09-07  Jim Meyering  <jim@meyering.net>
	
	* tests/t_rename_dir_cross_level.at: When invoking mv to rename
	a directory, do not include a trailing slash on the target -- that
	is not portable.                                                  
                       
	* Makefile.am (TESTS_ENVIRONMENT): Ensure that PATH starts with
	the current directory, so we test the just-built monotone binary,
	not some older version.                                          

2005-09-07  Benoît Dejean  <benoit@placenet.org>

	* std_hooks.lua: Don't spawn emacs with '-no-init-file'.

2005-09-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* paths.cc (save_initial_path): Default Boost's fs::path to
	fs::native grammar.
	* tests/t_unreadable_{db,MT}.at: Disable on Win32 for now.
	* paths.cc: Consistency--use WIN32 rather than _WIN32.
	* file_io.cc (walk_tree): Correct test for file existence.

2005-09-08  Matthew Gregan  <kinetik@orcon.net.nz>

	* Makefile.am: Add '-f' argument to 'mv'; avoids build waiting on
	 user confirmation in some cases.

2005-09-08  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi (Certificates): Remove mention of fcerts and
	mcerts.

2005-09-07  Benoît Dejean  <benoit@placenet.org>

	* ui.{cc,hh}: Added user_inferface::user_locale.
	* sanity.hh: Made F() and FP() locale aware.

2005-09-06  Benoît Dejean  <benoit@placenet.org>

	* monotone.cc: One more i18n string.

2005-09-06  Benoît Dejean  <benoit@placenet.org>

	* po/fr.po: Updated French translation.

2005-09-06  Benoît Dejean  <benoit@placenet.org>

	* commands.cc: No i18n for cert_revision_changelog.

2005-09-06  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_netsync_read_permissions.at: Tweak tests so we aren't
	trying to serve a bare '*'; works around test hangs due to glob
	expansion sillyness on MinGW.
	* tests/t_netsync_globs.at: Ditto.
	* tests/t_netsync_exclude.at: Ditto.
	* std_hooks.lua (ignore_file): Add Mac OS X (.DS_Store) and