@@ -1,3 +1,4 @@
+contrib/ciabot_monotone.py
 idna/nfkc.c
 popt/popt.c
 popt/popthelp.c
